# world-currencies

./: .gitignore  .npmignore  CHANGELOG.md  Gemfile  LICENSE  README.md  composer.json  devmehq-world-currencies.gemspec  jest.config.js  package.json  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: release-all.yml  release-npm.yml  release-packagist.yml  release-pypi.yml  release-rubygems.yml  test.yml
data/: world-currencies.json
src/php/: Currencies.php  Currency.php
src/python/world_currencies/: __init__.py
src/ruby/: world_currencies.rb
src/typescript/: index.ts
tests/php/: CurrenciesTest.php  CurrencyTest.php
tests/python/: test_currencies.py
tests/ruby/: currencies_spec.rb
tests/typescript/: currencies.test.ts
