[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "world-currencies"
version = "1.0.0"
description = "A comprehensive library providing currency information for all world currencies"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["currency", "currencies", "world-currencies", "iso-4217", "money", "finance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial"
]

[project.urls]
Homepage = "https://github.com/yourusername/world-currencies"
Repository = "https://github.com/yourusername/world-currencies"
Issues = "https://github.com/yourusername/world-currencies/issues"

[tool.setuptools]
packages = ["world_currencies"]
package-dir = {"world_currencies" = "src/python"}

[tool.setuptools.package-data]
world_currencies = ["../../data/world-currencies.json"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py", "*_test.py"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true